--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>edu-marketplace-client</title>
     <script src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+<!--    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">-->
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">-->
+<!--    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.1.10/dist/vuetify.js"></script>-->
   </head>
   <body>
     <noscript>
