--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 <!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">-->
 <!--    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">-->
 <!--    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.1.10/dist/vuetify.js"></script>-->
+    <script src="https://unpkg.com/vuejs-paginate@latest"></script>
   </head>
   <body>
     <noscript>
